--- a/src/components/ModulesCss/LogIn.module.css
+++ b/src/components/ModulesCss/LogIn.module.css
@@ -1,4 +1,4 @@
-.login{
+.login {
     font-family: 'Merriweather', serif;
     font-style: normal;
     font-weight: 600;
@@ -10,6 +10,92 @@
     float: right;
     margin-right: 40px;
     margin-top: 20px;
-    background-color:transparent;
-    
+    background-color: transparent;
+
+}
+
+.containerRegister {
+    background-color: #DCB5B0;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: center;
+
+}
+
+.formContainer {
+    height: auto;
+    background-color: rgba(101, 53, 53, 1);
+    width: 320px;
+    margin: 0 auto;
+    border-radius: 5px;
+    padding: 20px 0;
+
+}
+
+.logoForm {
+    font-family: 'Euphoria Script', cursive;
+    text-decoration-color: rgba(101, 53, 53, 1);
+    font-size: 100px;
+    font-weight: 400;
+    color: white;
+}
+
+.optForm {
+    margin: 10px;
+}
+
+.optForm input {
+    height: 27px;
+    border-radius: 5px;
+    border-width: 0;
+    padding-left: 3px;
+}
+
+.buttonRegister {
+    background-color: #ffffff;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #000000;
+    cursor: pointer;
+    display: inline-block;
+    font-family: 'Merriweather', serif;
+    font-style: normal;
+    font-size: 18px;
+    font-weight: 600;
+    font-weight: 500;
+    height: 40px;
+    width: 120px;
+    line-height: 20px;
+    list-style: none;
+    margin: 0;
+    outline: none;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin: 10px auto;
+
+}
+
+.buttonRegister:hover {
+    background-color: rgb(247, 236, 236);
+}
+
+.buttonRegisterPos {
+    width: 100%;
+    margin-top: 25px;
+    display: flex;
+    flex-flow: column;
+}
+
+.logInh2 {
+    font-family: 'Merriweather', serif;
+    font-style: normal;
+    color: white;
+    font-size: 22px;
 }
