--- a/src/components/ModulesCss/MainPage.module.css
+++ b/src/components/ModulesCss/MainPage.module.css
@@ -18,26 +18,30 @@
 }
 
 .header {
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    border-radius: 5px;
-    height: 120px;
-    width: 100%;
-    flex-flow: row wrap;
-    justify-content: space-between;
+    background-color: rgba(255, 255, 255, 0.7);
 
+    width: 100%;
 }
 
 .logo {
     font-family: 'Euphoria Script', cursive;
-    text-decoration-color: rgba(101, 53, 53, 1);
     color: black;
-    font-size: 100px;
+    font-size: 3.5rem;
     font-weight: 100;
-    line-height: 51px;
-    margin-bottom: 40px;
-    margin-top: 40px;
     /* background-color: #DCB5B0; */
+}
+
+.logoMasSearchbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.restoDeItems {
+    display: grid;
+    grid-template-columns: 70% 30%;
+
 }
 
 .Products {
@@ -87,9 +91,7 @@
     color: rgb(138, 54, 54);
 }
 
-.SearchBarHome {
-    margin-top: 34px;
-}
+
 
 .cards {
     width: 80%;
@@ -184,23 +186,35 @@
 .filtersDiv {
     font-family: 'Merriweather', serif;
     font-style: normal;
-    display: flex;
-    height: 20px;
     width: 100%;
-    margin: 50px auto;
-    flex-flow: row wrap;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    padding-left: 3rem;
+    font-size: 0.8rem;
+    height: 4rem;
+
+}
+
+.cartAndProfileAndFav {
+
+    display: grid;
+    grid-template-columns: 40% 30% 30%;
+    align-items: center;
+
+    justify-content: center;
+
+}
+
+.CartAndFav {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-left: 3rem;
+    align-items: center;
 }
 
 .select {
     margin: 4px;
-}
-
-.tapaHeader {
-    background-color: rgb(0, 0, 0);
-    height: 3.5rem;
-    width: 100%;
-
 }
 
 .paginado {
@@ -266,15 +280,10 @@ form .formNewsletterBox {
     font-family: 'Merriweather', serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
-    line-height: 24px;
-    border-width: 0px;
-    margin-right: 80px;
+    font-size: 1rem;
+    border: none;
     cursor: pointer;
-    color: #000000;
-    margin-top: 35px;
-    color: black;
-    background-color: rgb(255, 255, 255);
+    background-color: transparent;
 }
 
 .btnSubscribe {
@@ -299,4 +308,9 @@ form .formNewsletterBox {
     -webkit-user-select: none;
     touch-action: manipulation;
 
+}
+
+.btnSubscribe:disabled {
+    opacity: 0.5;
+    cursor: auto;
 }
