--- a/src/components/ModulesCss/SearchBar.module.css
+++ b/src/components/ModulesCss/SearchBar.module.css
@@ -9,8 +9,8 @@
 .input {
   padding: 0.5rem;
   border-radius: 2rem;
-  border: none;
-  border-width: 0px;
+  border-width: 0.1rem;
+
 }
 
 .input1 {
