--- a/src/components/ModulesCss/users.module.css
+++ b/src/components/ModulesCss/users.module.css
@@ -1,10 +1,6 @@
 .profileContainer {
   
-    height: 45rem;
-    background: #DCB5B0;
-    display:grid;
-    grid-template-rows: 10% 90%;
-   
+  
 
 }
 
@@ -19,6 +15,7 @@
     margin: 0 auto;
     display: grid;
     grid-template-columns: 20% 80%;
+ 
 }
 
 .userData{
@@ -60,8 +57,7 @@ border-radius: 5px;
    
    background-color: transparent;
     margin: 0 auto;
-    display: grid;
-    grid-template-rows: 18% 82%;
+   margin-top: -3.9rem;
 }
 
 .btnHome {
@@ -96,11 +92,11 @@ border-radius: 5px;
 }
 
 .btnHome:hover {
-    background-color: rgb(247, 236, 236);
+  background-color: red;
 }
 
 .header{
-    background-color: rgba(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     display: grid;
     grid-template-columns: 100%;
     height: 4rem;
@@ -113,10 +109,9 @@ border-radius: 5px;
 .logoForm {
     font-family: 'Euphoria Script', cursive;
     text-decoration-color: rgb(0, 0, 0);
-
     font-weight: 400;
     color: rgb(1, 1, 1);
-    background-color: transparent;
+   
 
 }
 
@@ -158,6 +153,7 @@ border-radius: 5px;
 
 .item{
     margin: 1rem;
+    
    
 }
 
@@ -193,11 +189,89 @@ border-radius: 5px;
  
 }
 
-.item_data_titles_sub{
+
+
+
+
+
+
+.containerRegister {
+   
+   
+    min-height: 900px;
+    padding: 40px;
     display: flex;
-    padding-left: 0.2rem;
-    color: black;
+   
+
+}
+
+
+
+
+
+.optForm {
+    margin: 10px;
+}
+
+
+
+.LoginMsg {
+    color: rgb(81, 70, 70);
+    font-weight: 100;
     background-color: transparent;
-  
+    padding: 1rem;
+    margin-bottom: 2rem;
+    font-family: 'Merriweather', serif;
+
+}
+
+
+
+.optForm input {
+    height: 1.8rem;
+    border-radius: 2rem;
+    width: 12rem;
+    text-align: center;
+    border: 0;
+
+}
+
+
+
+.buttonRegister {
+    background-color: rgb(138, 54, 54,0.7);
+    border-radius: 5px;
+    border-style: none;
+    box-sizing: border-box;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    font-style: normal;
+    font-weight: 600;
+    font-weight: 500;
+    height: 2rem;
+    width: 8rem;
+    line-height: 20px;
+    list-style: none;
+    margin: 0;
+    outline: none;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin: 0.2rem auto;
+    transition: 0.3s;
+    margin-left: 1rem;
+    margin-right: 1rem;
+
+}
+
+.buttonRegister:hover {
+    opacity: 0.7;
+    transition: 0.3s;
 }
 
