--- a/src/components/ModulesCss/CardsDetails.module.css
+++ b/src/components/ModulesCss/CardsDetails.module.css
@@ -22,45 +22,191 @@
     background-repeat: no-repeat;
     height: auto;
     margin-top: 80px;
+    column-count: 2;
+}
+
+
+
+
+
+.cartAndProfileAndFav {
+    float: right;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
+.filtersDiv {
+    font-family: 'Merriweather', serif;
+    font-style: normal;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 30% 15% 15% 15% 25%;
+    justify-content: center;
+    align-items: center;
+    padding-left: 3rem;
+    font-size: 0.8rem;
+    height: 4rem;
+
+
+}
+
+.profileBtn {
+    margin-bottom: 0.1rem;
+    padding-left: 18px;
+}
+
+.btnCarrito {
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: #000000;
+    cursor: pointer;
+    transition: 0.3s;
+    width: 5rem;
+}
+
+.logo {
+    font-family: 'Euphoria Script', cursive;
+    color: black;
+    font-size: 3.2rem;
+    cursor: pointer;
+    font-weight: 100;
+    margin-left: 5rem;
+    border: none;
+    background-color: transparent;
+}
+
+.btnFav {
+    background-color: transparent;
+    border: none;
+    font-size: 1.3rem;
+    color: #000000;
+    cursor: pointer;
+    transition: 0.3s;
+    width: 5rem;
+}
+
+.iconsHeader {
+    font-size: 2rem;
+}
+
+.CartAndFav {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    margin-left: 3rem;
+    align-items: center;
+}
+
+.btnCarrito:hover {
+    color: rgb(141, 93, 93);
+    transition: 0.3s;
+}
+
+.btnFav:hover {
+    color: rgb(141, 93, 93);
+    transition: 0.3s;
+}
+
+.cantItems {
+    background-color: red;
+    border-radius: 9999px;
+    width: 0.9rem;
+    height: 0.9rem;
+    font-size: 0.75rem;
+    position: relative;
+    bottom: 1rem;
+    left: 1.5rem;
+    color: white;
+}
+
+.restoDeItems {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    width: 100%;
+    background-color: transparent;
+    z-index: 3;
 }
 
 .data {
+    background-color: white;
     display: flex;
+    width:60%;
+    border-radius: 5px;
+    /* border-radius: 5px; */
+    /* flex-direction: column; */
+    /* flex-wrap: wrap; */
+    margin: auto;
+    height: auto;
+    padding: 30px;
+    align-items: center;
+    justify-content: center;
+}
 
-    width: 60%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 0 auto;
+.artworkdetailsH3 {
+    margin-bottom: 10px;
 }
 
 .detailsH3,
 .detailsTittle {
     font-family: 'Merriweather', serif;
     font-style: normal;
-    text-align: left;
     max-width: 400px;
-    margin-top: 30px;
-    margin-left: 15px;
+}
+
+.dataText {
+    padding: 1rem;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-radius: 5px;
+    width: 31rem;
+    order: 2;
+    /* background-color: lightgreen; */
+    margin: auto;
+}
+
+.detailsPrice {
+    font-size: 30px;
+    margin-bottom: 15px;
 }
 
 .detailsTittle {
+    /* text-align: left; */
+    font-style: bold;
     font-size: 24px;
+    margin: auto;
+    margin-bottom: 1rem;
+
 }
+
+.btnsDetailsPos {}
+
+
 
 .detailsH3 {
     font-size: 18px;
 }
 
 .imgDetails {
-    margin-left: 65px;
+   display: flex;
+   width: 100%;
+   height: 100%;
+   justify-content: center;
+    
+}
+
+.imgDetailsPos {
+width: 100%;
+height: 100%;
+
+
 }
 
 .artist {
-    margin-top: 60px;
+    margin-top: 28px;
     font-family: 'Merriweather', serif;
     font-style: normal;
     width: 100%;
-    text-align: left;
     margin-bottom: 20px;
 }
 
@@ -70,70 +216,35 @@
 
 .header {
     background-color: rgb(255, 255, 255);
-    display: flex;
-    border-radius: 5px;
-    height: 120px;
     width: 100%;
-    flex-flow: row wrap;
-    justify-content: space-between;
-
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
 }
 
-.logo {
+.logoDetails {
     font-family: 'Euphoria Script', cursive;
-    text-decoration-color: rgba(101, 53, 53, 1);
     color: black;
-    font-size: 100px;
+    font-size: 3.2rem;
     font-weight: 100;
-    line-height: 51px;
-    margin-bottom: 40px;
-    margin-top: 40px;
-    /* background-color: #DCB5B0; */
+    border: none;
+    background-color: transparent;
 }
 
-.btnHome {
-    grid-column: 1/3;
-    grid-row: 1;
-    font-family: 'Merriweather', serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 24px;
-    height: 30px;
-    border-width: 0px;
+.link {
+    width: 60px;
     cursor: pointer;
-    float: left;
-    color: #000000;
-    margin-left: 80px;
-    margin-top: 40px;
-    color: black;
-    background-color: rgb(255, 255, 255);
 }
 
-.btnHome:hover {
-    color: rgb(138, 54, 54);
-
+.logo a {
+    width: 5px;
 }
 
-.btnCarrito {
-    float: right;
-    grid-column: 3/3;
-    grid-row: 1;
-    height: 30px;
-    font-family: 'Merriweather', serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 24px;
-    border-width: 0px;
-    margin-right: 80px;
-    cursor: pointer;
-    color: #000000;
-    margin-top: 40px;
-    color: black;
-    background-color: rgb(255, 255, 255);
+.tapaHeader {
+    height: 4rem;
+    margin-bottom: 2rem;
 }
-
 
 .btnUser {
     float: right;
@@ -157,11 +268,11 @@
 
 
 .buttonAddCart {
-    background-color: #ffffff;
+    background-color: black;
     border-radius: 8px;
     border-style: none;
     box-sizing: border-box;
-    color: #000000;
+    color: white;
     cursor: pointer;
     display: inline-block;
     font-family: 'Merriweather', serif;
@@ -191,8 +302,11 @@
 .buttonAddCart:hover {
     background-color: rgb(138, 54, 54);
     color: white;
+    transition: 0.3s;
 }
 
 .buttonAddCartPos {
+    width: 100%;
     margin-top: 40px;
+    margin-bottom: 10px;
 }
