--- a/src/components/ModulesCss/Carrito.module.css
+++ b/src/components/ModulesCss/Carrito.module.css
@@ -1,41 +1,206 @@
 .containerCarrito {
     width: 100%;
-    height: 938px;
-    background: #DCB5B0;
+    min-height: 938px;
     display: flex;
     flex-flow: row wrap;
     align-content: center;
     color: rgb(0, 0, 0);
+    padding-bottom: 20px;
+}
+
+.filtersDiv {
+    font-family: 'Merriweather', serif;
+    font-style: normal;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 30% 15% 15% 15% 25%;
+    justify-content: center;
+    align-items: center;
+    padding-left: 3rem;
+    font-size: 0.8rem;
+    height: 4rem;
+}
+
+.link {
+    width: 60px;
+    cursor: pointer;
+}
+
+.logo a {
+    width: 5px;
+}
+
+.logo {
+    font-family: 'Euphoria Script', cursive;
+    color: black;
+    font-size: 3.2rem;
+    cursor: pointer;
+    font-weight: 100;
+    margin-left: 5rem;
+    border: none;
+    background-color: transparent;
+}
+
+.logoDetails {
+    font-family: 'Euphoria Script', cursive;
+    color: black;
+    font-size: 3.2rem;
+    font-weight: 100;
+    border: none;
+    background-color: transparent;
+}
+
+.restoDeItems {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    width: 100%;
+    background-color: transparent;
+    z-index: 3;
+}
+
+.cartAndProfileAndFav {
+    float: right;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
+.CartAndFav {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    margin-left: 3rem;
+    align-items: center;
+}
+
+
+
+.cantItems {
+    background-color: red;
+    border-radius: 9999px;
+    width: 0.9rem;
+    height: 0.9rem;
+    font-size: 0.75rem;
+    position: relative;
+    bottom: 1rem;
+    left: 1.5rem;
+    color: white;
+}
+
+.header {
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
+}
+
+.tapaHeader {
+    height: 4rem;
+    margin-bottom: 2rem;
+}
+
+.profileBtn {
+    margin-bottom: 0.1rem;
+    padding-left: 18px;
+}
+
+.iconsHeader {
+    font-size: 2rem;
+}
+
+.btnCarritoNav {
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: #000000;
+    cursor: pointer;
+    transition: 0.3s;
+    width: 5rem;
+}
+
+.btnFav {
+    background-color: transparent;
+    border: none;
+    font-size: 1.3rem;
+    color: #000000;
+    cursor: pointer;
+    transition: 0.3s;
+    width: 5rem;
+}
+
+
+.logoDetails {
+    font-family: 'Euphoria Script', cursive;
+    color: black;
+    font-size: 3.2rem;
+    font-weight: 100;
+    border: none;
+    background-color: transparent;
 }
 
 .allCarritoContainer {
-    border-radius: 10px;
-    background-color: rgb(173, 65, 65);
+    /* border-radius: 5px; */
+    background-color: rgb(250, 250, 250);
     width: 70%;
     margin: auto;
     display: flex;
     flex-direction: row;
+    box-shadow: 0px 0px 1px rgb(0 0 0 / 30%);
 }
 
 .carrito {
     width: 70%;
+    height: 100px;
+    padding: 5px;
     margin: 15px auto;
-    background-color: rgba(101, 53, 53, 1);
-    border-radius: 10px;
-    color: white;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-radius: 5px;
+    color: rgb(0, 0, 0);
 }
 
 .imgCarrito {
     float: left;
     width: 70px;
     height: 70px;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-bottom: 20px;
+    padding: 12px;
 }
 
 .titleCarrito {
+    margin-right: 6rem;
+    max-height: 24px;
     font-size: 18px;
+}
+
+.titleBy {
+    margin-right: 6rem;
+}
+
+.favEmpty {
+    width: 70%;
+    border-radius: 3px;
+    background-color: white;
+    margin: auto;
+    color: rgb(83, 76, 76);
+    height: 300px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-content: center;
+    box-shadow: 0px 0px 1px rgb(0 0 0 / 30%);
+    font-family: 'Merriweather', serif;
+    font-style: normal;
+    font-size: 30px;
+}
+
+.divTittle {
+    font-family: 'Merriweather', serif;
+    font-style: normal;
+    font-size: 42px;
+    color: black;
+    position: relative;
 }
 
 .priceCarrito {
@@ -49,37 +214,27 @@
 }
 
 .btnCarrito {
-    background-color: rgba(101, 53, 53, 1);
-    border-radius: 8px;
+    background-color: transparent;
     border-style: none;
-    box-sizing: border-box;
-    color: #DCB5B0;
+    color: rgba(101, 53, 53, 1);
     cursor: pointer;
     display: inline-block;
     font-family: 'Merriweather', serif;
     font-style: normal;
-    font-size: 12px;
+    font-size: 14px;
     height: 40px;
     width: auto;
-    line-height: 20px;
-    list-style: none;
-    margin: 5px;
     outline: none;
-    position: relative;
     text-align: center;
     text-decoration: none;
-    transition: color 100ms;
-    vertical-align: baseline;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+    margin: 5px;
+    margin-top: 19px;
+    padding: 12px;
 
 }
 
 .btnCarritoPos {
-    width: 100%;
-    margin: auto;
-
+    padding-top: 12px;
 }
 
 .btnHome {
@@ -111,6 +266,12 @@
 
 }
 
-.btnHomePos {
-    width: 100%;
+.btnCarritoNav:hover {
+    color: rgb(141, 93, 93);
+    transition: 0.3s;
+}
+
+.btnFav:hover {
+    color: rgb(141, 93, 93);
+    transition: 0.3s;
 }
