--- a/src/components/ModulesCss/MainPage.module.css
+++ b/src/components/ModulesCss/MainPage.module.css
@@ -26,10 +26,9 @@ margin-top: 2rem;
 .header {
     background-color: rgb(255, 255, 255);
     width: 100%;
-    position: fixed;
+    
     z-index: 3;
-    top: 0;
-    left: 0;
+   
 }
 
 button {
@@ -42,6 +41,7 @@ button {
     cursor: pointer;
     font-size: 3.2rem;
     font-weight: 100;
+    margin-left: 5rem;
     border: none;
     background-color: transparent;
 }
@@ -61,8 +61,6 @@ button {
     width: 100%;
    
     z-index: 3;
-
-
 }
 
 .Products {
@@ -153,16 +151,19 @@ button {
 }
 
 .carrusel {
-    max-height: 50rem;
+    max-height: 60rem;
     margin: auto;
     overflow: hidden;
     width: 70%;
     margin-top: 3rem;
     margin-bottom: 3rem;
+    
+    padding: 2rem;
 
 }
 
 .carrusel ul {
+  
     display: flex;
     padding: 0;
     width: 500%;
@@ -219,10 +220,12 @@ button {
 
 }
 
-.tapaHeader {
-    height: 4rem;
-    margin-bottom: 2rem;
+.linkMain {
+    background-color: transparent;
+    width: 80px;
 }
+
+
 
 .featured {
     font-family: 'Merriweather', serif;
@@ -279,7 +282,7 @@ button {
 
 .CartAndFav {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 30% 27% 10%;
     margin-left: 3rem;
     align-items: center;
 }
