--- a/src/components/ModulesCss/MainPage.module.css
+++ b/src/components/ModulesCss/MainPage.module.css
@@ -18,17 +18,17 @@
 
 }
 
-.filtersAplied{
+.filtersAplied {
 
-margin-top: 2rem;
+    margin-top: 2rem;
 }
 
 .header {
     background-color: rgb(255, 255, 255);
     width: 100%;
-    
+
     z-index: 3;
-   
+
 }
 
 button {
@@ -57,9 +57,9 @@ button {
 .restoDeItems {
     display: grid;
     grid-template-columns: 70% 30%;
-    background-color:transparent;
+    background-color: transparent;
     width: 100%;
-   
+
     z-index: 3;
 }
 
@@ -110,7 +110,7 @@ button {
     color: rgb(138, 54, 54);
 }
 
-.btnAddArtwork {
+addart .btnAddArtwork {
     float: right;
     height: 30px;
     font-family: 'Merriweather', serif;
@@ -139,11 +139,11 @@ button {
 
 .cardsContainer {
     height: auto;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255);
     width: 90%;
     margin: 0 auto;
     border-radius: 1rem;
-    box-shadow: 0 0 5rem rgb(218, 148, 148);
+    box-shadow: 0 0 3px rgb(0, 0, 0);
     padding-bottom: 0.1rem;
     min-height: 40rem;
 
@@ -157,13 +157,13 @@ button {
     width: 70%;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    
+
     padding: 2rem;
 
 }
 
 .carrusel ul {
-  
+
     display: flex;
     padding: 0;
     width: 500%;
@@ -288,6 +288,7 @@ button {
 }
 
 .select {
+
     margin: 4px;
 }
 
@@ -323,7 +324,7 @@ button {
 
 .button31Paginado:hover,
 .button31Paginado:focus {
-    background-color: rgb(0, 0, 0);
+    background-color: black;
     color: rgb(255, 255, 255);
 }
 
@@ -416,11 +417,11 @@ form .formNewsletterBox {
 }
 
 .galeryTitle {
-    background: #f7dedb;
+
     width: 100%;
     margin: 0 auto;
     margin-top: 5rem;
-    color: rgb(81, 70, 70);
+    color: rgb(0, 0, 0);
     font-family: 'Euphoria Script', cursive;
     font-size: 3rem;
     font-weight: 600;
@@ -443,7 +444,7 @@ form .formNewsletterBox {
     font-size: 2rem;
 }
 
-.buttonsFilter{
+.buttonsFilter {
     background-color: rgba(234, 60, 60);
     width: 1.5rem;
     height: 1.5rem;
@@ -452,7 +453,8 @@ form .formNewsletterBox {
     cursor: pointer;
     color: white;
 }
-.buttonsFilter:hover{
+
+.buttonsFilter:hover {
     background-color: rgb(212, 43, 43);
 }
 
@@ -479,6 +481,7 @@ form .formNewsletterBox {
     z-index: inherit;
     color: black;
     text-decoration: none;
+
 
 
 }
