--- a/src/components/ModulesCss/Cards.module.css
+++ b/src/components/ModulesCss/Cards.module.css
@@ -4,33 +4,49 @@
     font-style: normal;
     text-decoration: none;
     color: rgb(0, 0, 0);
-
     height: 30rem;
     margin: 1rem auto;
     transition: .3s;
     align-items: center;
     justify-content: center;
-    box-shadow: 0rem 0rem 1rem rgb(0, 0, 0, 0.3);
-    border-radius: 2rem;
+    box-shadow: 0rem 0rem 1rem rgb(0, 0, 0, 0.18);
+    border-radius: 6px;
 
 }
 
-
+@media (max-width: 414px) {
+    .card {
+        height: 15rem;
+    }
+}
 
 .name {
     color: rgb(5, 5, 5);
     max-width: 30rem;
     margin: 1rem;
-    font-size: 1.6rem;
+    font-size: 2rem;
+}
+
+@media (max-width: 414px) {
+    .name {
+        font-size: 22px;
+        min-width: 9rem;
+    }
 }
 
 .types {
     color: rgb(0, 0, 0);
     max-width: 30rem;
+    margin: 1rem;
+    font-size: 1.5rem;
 
-    margin: 0 auto;
-    margin-bottom: 1rem;
+}
 
+@media (max-width: 414px) {
+    .types {
+        font-size: 18px;
+        min-width: 9rem;
+    }
 }
 
 .card:hover .name {
@@ -59,6 +75,12 @@
     box-shadow: 0rem 0rem 1rem rgb(0, 0, 0, 0.3);
     border-radius: 0.2rem;
     max-width: 60%;
+}
+
+@media (max-width: 414px) {
+    .img {
+        max-height: 14rem;
+    }
 }
 
 .img:hover {
