--- a/src/components/ModulesCss/LogOut.module.css
+++ b/src/components/ModulesCss/LogOut.module.css
@@ -10,6 +10,8 @@
 
 }
 
+
+
 .logout:hover {
     color: rgb(141, 93, 93);
     transition: 0.3s;
@@ -24,7 +26,7 @@
 
     display: grid;
     grid-template-columns: 50% 50%;
- 
+
 }
 
 .buttonsLink {
@@ -112,9 +114,11 @@
 }
 
 .buttonsProfBase {
+    width: 80px;
     font-size: 1.8rem;
     background-color: rgba(255, 255, 255, 0);
     margin-top: 0.1rem;
+
 }
 
 .buttonsProfBase:hover {
