--- a/src/components/ModulesCss/profileEdit.module.css
+++ b/src/components/ModulesCss/profileEdit.module.css
@@ -1,52 +1,54 @@
-.header{
+.header {
     background-color: rgba(255, 255, 255);
     display: grid;
     grid-template-columns: 100%;
     height: 4rem;
     align-content: center;
- 
+
     width: 100%;
-    box-shadow: 0 0 2rem rgb(5, 5, 5,0.1);
+    box-shadow: 0 0 2rem rgb(5, 5, 5, 0.1);
 }
 
-.body{
+.body {
 
     background-color: rgba(253, 253, 252, 0.7);
     width: 80%;
-    
+
     border-radius: 5px;
     padding: 20px 0;
-    box-shadow: 0 0 2rem rgb(5, 5, 5,0.1);
+    box-shadow: 0 0 2rem rgb(5, 5, 5, 0.1);
     margin: 0 auto;
     margin-top: 3rem;
 }
 
-.container{
+.container {
     width: 100%;
     background: #DCB5B0;
 }
+
 .logoForm {
     font-family: 'Euphoria Script', cursive;
-    text-decoration-color: rgb(0, 0, 0);
-
-    font-weight: 400;
-    color: rgb(1, 1, 1);
+    color: black;
+    cursor: pointer;
+    font-size: 3.2rem;
+    font-weight: 100;
+    border: none;
     background-color: transparent;
 
 }
 
-.items{
+.items {
     background-color: transparent;
     margin-bottom: 1rem;
 }
 
-.items_title{
-background-color: transparent;
-font-size: 1.4rem;
+.items_title {
+    background-color: transparent;
+    font-size: 1.4rem;
 }
 
 
-.input{
+.input {
     height: 1.8rem;
     border-radius: 2rem;
     width: 12rem;
@@ -54,9 +56,7 @@ font-size: 1.4rem;
     border: 0;
 }
 
-.selectorDeImagen{
-    
-}
+.selectorDeImagen {}
 
 .button {
     background-color: rgb(138, 54, 54);
@@ -92,14 +92,15 @@ font-size: 1.4rem;
     opacity: 0.7;
     transition: 0.3s;
 }
-.volver{
+
+.volver {
     background-color: transparent;
     position: absolute;
-    right:85% ;
+    right: 85%;
     font-size: 2rem;
     cursor: pointer;
 }
-.volver:hover{
-   color: rgb(138, 54, 54);
-}
 
+.volver:hover {
+    color: rgb(138, 54, 54);
+}
