--- a/src/components/ModulesCss/users.module.css
+++ b/src/components/ModulesCss/users.module.css
@@ -1,12 +1,12 @@
 .content {
 
- height: 50rem;
+    height: 50rem;
 
 
 }
 
 .profile {
-   
+
     /* background-color: rgba(253, 253, 252, 0.7); */
     height: 30rem;
     width: 90%;
@@ -17,38 +17,38 @@
     display: grid;
     grid-template-columns: 20% 80%;
     margin-top: 4rem;
- 
+
 }
 
-.userData{
+.userData {
 
-display: grid;
-grid-template-columns: 20% 80%;
-height: 8.2rem;
-background-color: rgba(253, 253, 252, 0.7);
-box-shadow: 0 0 2rem rgb(5, 5, 5,0.1);
-border-radius: 5px;
+    display: grid;
+    grid-template-columns: 20% 80%;
+    height: 8.2rem;
+    background-color: rgba(253, 253, 252, 0.7);
+    box-shadow: 0 0 2rem rgb(5, 5, 5, 0.1);
+    border-radius: 5px;
 }
 
-.formContainer{
-    
+.formContainer {
+
     width: 100%;
-    
+
 }
 
 .panelLeft {
 
     background-color: rgba(253, 253, 252, 0.7);
     width: 100%;
-    
+
     border-radius: 5px;
     padding: 20px 0;
-    box-shadow: 0 0 2rem rgb(5, 5, 5,0.1);
+    box-shadow: 0 0 2rem rgb(5, 5, 5, 0.1);
     margin: 0 auto;
     height: 37.5%;
 }
 
-.panelLeft body{
+.panelLeft body {
     padding: 1rem;
     display: flex;
     align-items: flex-start;
@@ -59,14 +59,14 @@ border-radius: 5px;
 
 
 
-.panelRight{
-   
+.panelRight {
+
     width: 90%;
     border-radius: 5px;
-   
-   background-color: transparent;
+
+    background-color: transparent;
     margin: 0 auto;
-   margin-top: -3.9rem;
+    margin-top: -3.9rem;
 }
 
 .btnHome {
@@ -100,9 +100,7 @@ border-radius: 5px;
 
 }
 
-.btnHome:hover {
-
-}
+.btnHome:hover {}
 
 .header {
     background-color: rgb(255, 255, 255);
@@ -119,42 +117,43 @@ border-radius: 5px;
 
 .logoForm {
     font-family: 'Euphoria Script', cursive;
-    text-decoration-color: rgb(0, 0, 0);
-    font-weight: 400;
-    color: rgb(1, 1, 1);
-   
-   
+    color: black;
+    cursor: pointer;
+    font-size: 3.2rem;
+    font-weight: 100;
+    border: none;
+    background-color: transparent;
 
 }
 
-.iconUser{
+.iconUser {
     font-size: 7rem;
 }
 
-.iconsLeft{
+.iconsLeft {
     font-size: 1.3rem;
     padding-right: 0.6rem;
 }
 
-.nameAndRol{
+.nameAndRol {
     display: grid;
     grid-template-rows: 52% 10%;
     height: 8.2rem;
 }
 
-.name{
+.name {
     display: flex;
-    align-items:flex-end;
- 
+    align-items: flex-end;
+
 }
 
-.rol{
+.rol {
     display: flex;
     padding-left: 0.2rem;
-  
+
 }
 
-.optionsUser{
+.optionsUser {
     margin-top: 4rem;
     padding: 2rem;
     width: 100%;
@@ -163,42 +162,43 @@ border-radius: 5px;
     border-radius: 0.2rem;
 }
 
-.item{
+.item {
     margin: 1rem;
-    
-   
+
+
 }
 
 
-.item_data{
+.item_data {
     display: grid;
     grid-template-columns: 10% 90%;
-  
-    
+
+
 }
 
-.item_data_icon{
+.item_data_icon {
     font-size: 4rem;
     color: #000000;
     position: relative;
     bottom: 0.1rem;
 }
-.item_data_titles{
+
+.item_data_titles {
     display: grid;
-  
+
     padding-left: 0.5rem;
     background-color: transparent;
-    
+
 }
 
-.item_data_titles_main{
+.item_data_titles_main {
     display: flex;
-    align-items:flex-end;
+    align-items: flex-end;
     color: black;
     font-size: 1.5rem;
     font-weight: 600;
     background-color: transparent;
- 
+
 }
 
 
@@ -208,12 +208,12 @@ border-radius: 5px;
 
 
 .containerRegister {
-   
-   
+
+
     min-height: 900px;
     padding: 40px;
     display: flex;
-   
+
 
 }
 
@@ -231,10 +231,10 @@ border-radius: 5px;
     color: rgb(81, 70, 70);
     font-weight: 100;
     background-color: transparent;
-padding-bottom: 1rem;
+    padding-bottom: 1rem;
     font-family: 'Merriweather', serif;
     width: 100%;
-  
+
 
 }
 
@@ -252,7 +252,7 @@ padding-bottom: 1rem;
 
 
 .buttonRegister {
-    background-color: rgb(138, 54, 54,0.7);
+    background-color: rgb(138, 54, 54, 0.7);
     border-radius: 5px;
     border-style: none;
     box-sizing: border-box;
@@ -290,9 +290,9 @@ padding-bottom: 1rem;
 }
 
 
-.buttonCreateUser{
-   
-    background-color: rgb(138, 54, 54,0.7);
+.buttonCreateUser {
+
+    background-color: rgb(138, 54, 54, 0.7);
     border-radius: 5px;
     border-style: none;
     box-sizing: border-box;
@@ -320,19 +320,19 @@ padding-bottom: 1rem;
     transition: 0.3s;
     margin-left: 1rem;
     margin-right: 1rem;
-   margin-top: 1rem;
-   padding: 0.3rem;
+    margin-top: 1rem;
+    padding: 0.3rem;
 }
 
-.buttonCreateUser:hover{
+.buttonCreateUser:hover {
     opacity: 0.7;
     transition: 0.3s;
 }
 
 
-.optionsUseritem{
+.optionsUseritem {
 
-border-top: solid 1px;
-padding: 1rem;
-margin-bottom: 1rem;
+    border-top: solid 1px;
+    padding: 1rem;
+    margin-bottom: 1rem;
 }
