--- a/src/components/ModulesCss/Cards.module.css
+++ b/src/components/ModulesCss/Cards.module.css
@@ -29,8 +29,9 @@
 
 @media (max-width: 414px) {
     .name {
-        font-size: 22px;
+        font-size: 19px;
         min-width: 9rem;
+
     }
 }
 
@@ -44,7 +45,7 @@
 
 @media (max-width: 414px) {
     .types {
-        font-size: 18px;
+        font-size: 14px;
         min-width: 9rem;
     }
 }
@@ -84,7 +85,7 @@
 }
 
 .img:hover {
-    transform: scale(1.7);
+    transform: scale(1.2);
     transition: 400ms;
     box-shadow: 0rem 0rem 0rem rgb(3, 3, 3);
 }
@@ -104,11 +105,37 @@
     box-shadow: 0rem 0rem 1rem rgb(0, 0, 0, 0.3);
 }
 
+@media (max-width: 414px) {
+    .buttons {
+        height: 1rem;
+        width: 4rem;
+        margin: auto;
+        margin-bottom: 0.3rem;
+
+    }
+}
+
+@media (max-width: 414px) {
+    .buttonsPos {
+        width: 10rem;
+        display: flex;
+        flex-flow: row;
+        align-content: space-between;
+
+    }
+}
+
 .buttons:hover {
     opacity: 0.7;
     transition: 0.3s;
 }
 
 .allwithoutimage {
-    max-width: 30%;
+    width: 26rem;
+}
+
+@media (max-width: 414px) {
+    .allwithoutimage {
+        max-width: 30%;
+    }
 }
