--- a/src/components/ModulesCss/Cards.module.css
+++ b/src/components/ModulesCss/Cards.module.css
@@ -71,11 +71,12 @@
 
 .img {
 
-    margin-left: 9rem;
+    margin-left: 18rem;
     transition: 400ms;
     box-shadow: 0rem 0rem 1rem rgb(0 0 0 / 30%);
     border-radius: 0.2rem;
     min-width: auto;
+    max-width: 41rem;
 }
 
 @media (max-width: 414px) {
