--- a/src/components/ModulesCss/Cards.module.css
+++ b/src/components/ModulesCss/Cards.module.css
@@ -8,7 +8,7 @@
     margin: 1rem auto;
     transition: .3s;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
     box-shadow: 0rem 0rem 1rem rgb(0, 0, 0, 0.18);
     border-radius: 6px;
     height: 17rem;
